Fix vertical center bug in the EatOut component. Fix background not covering entire EatOut component bug.

--- a/react-app/src/EatOut/Info.css
+++ b/react-app/src/EatOut/Info.css
@@ -23,5 +23,6 @@
         width: 55%;
         margin-left: 22%;
         font-size: 4.5vw;
+        padding-bottom: 65%;
     }
 }
